add booster club page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=9fd4e25254283df4b75d",
-    "/css/app.css": "/css/app.css?id=f700bd046c1e1f34b7dd"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
