--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "mews/purifier": "^3.3"
     },
     "require-dev": {
