--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2b59755735c44c89915a",
+    "/css/app.css": "/css/app.css?id=fcf47ccf557fae1aa84f"
 }
