--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "laravel-mix": "^6.0.6",
         "laravel-mix-tailwind": "^0.1",
         "postcss": "^8.1.14",
-        "prettier": "2.5.1",
+        "prettier": "^2.5.1",
+        "prettier-plugin-tailwindcss": "^0.1.8",
         "resolve-url-loader": "^3.1",
         "sass": "^1.32",
         "sass-loader": "^8.0",
