--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,15 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
         "asantibanez/livewire-calendar": "^2.1",
         "cviebrock/eloquent-sluggable": "^8.0",
-        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel-frontend-presets/tall": "^4.0",
         "laravel/framework": "^8.65",
