--- a/composer.json
+++ b/composer.json
@@ -8,27 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "asantibanez/livewire-calendar": "^2.1",
-        "cviebrock/eloquent-sluggable": "^8.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel-frontend-presets/tall": "^4.0",
-        "laravel/framework": "^8.65",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.8",
+        "cviebrock/eloquent-sluggable": "^9.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel-frontend-presets/tall": "^4.1",
+        "laravel/framework": "^9.38",
+        "laravel/sanctum": "^3.0",
+        "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "mews/purifier": "^3.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
-        "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.15",
         "laravel/telescope": "^4.7",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "nunomaduro/collision": "^6.3",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.4"
     },
     "autoload": {
         "psr-4": {
